feat: Bump ruby versions in Github Action workflows

--- a/ruby.json5
+++ b/ruby.json5
@@ -22,5 +22,11 @@
 			],
 			datasourceTemplate: "rubygems",
 		},
+		{
+			fileMatch: ["^\\.github/workflows/[^/]+\\.ya?ml$"],
+			matchStrings: ['ruby-version:\\s+"(?<currentValue>.*?)"'],
+			depNameTemplate: "ruby",
+			datasourceTemplate: "ruby-version",
+		},
 	],
 }
