--- a/go.json5
+++ b/go.json5
@@ -12,7 +12,7 @@
 	regexManagers: [
 		{
 			fileMatch: ["^\\.github/workflows/[^/]+\\.ya?ml$"],
-			matchStrings: ['go-version: "(?<currentValue>.*?)"'],
+			matchStrings: ['go-version:\\s+"(?<currentValue>.*?)"'],
 			depNameTemplate: "golang",
 			datasourceTemplate: "golang-version",
 		},
