feat: explicitly enable vuln alerts since default value is unclear

--- a/default.json5
+++ b/default.json5
@@ -21,4 +21,10 @@
 
 	// Have renovate sign commits as GitHub App.
 	platformCommit: true,
+
+	vulnerabilityAlerts: {
+		enabled: true,
+		labels: ["security"],
+	},
+	osvVulnerabilityAlerts: true,
 }
